# tmux-codingagent-driver

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: code-review.md  design.md  dev-log.md  fix-report.md  integration-guide.md  log-analysis.md  prd-event-log.md  prd-worktree.md  prd.md  quickstart-test.md  scenarios.md  test-plan-worktree.md  test-plan.md  workflow-issues.md  workflow-log.md
docs/research/: acp-vs-tmux-comprehensive-report.md  claude-code-bridge-analysis.md  codex-orchestrator-analysis.md  comparison-ccb-vs-codex-orchestrator.md  integration-analysis.md  tmux-bridge-vs-tcd-comparison.md
src/tcd/: __init__.py  cli.py  collector.py  config.py  diagnostics.py  event_log.py  idle_detector.py  job.py  marker_detector.py  notify_hook.py  output_cleaner.py  provider.py  sdk.py  tmux_adapter.py  worktree.py
src/tcd/providers/: claude.py  codex.py  gemini.py
tests/: test_bridge_absorb.py  test_claude_provider.py  test_cli.py  test_cli_worktree.py  test_codex_provider.py  test_collector.py  test_diagnostics.py  test_event_log.py  test_gemini_provider.py  test_idle_detector.py  test_job.py  test_marker_detector.py  test_notify_hook.py  test_output_cleaner.py  test_provider.py  test_sdk.py  test_tmux_adapter.py  test_worktree.py  test_worktree_sdk.py
