[project]
name = "tcd"
version = "0.1.0"
description = "tmux-codingagent-driver: Drive AI CLI tools (Codex, Claude Code, Gemini CLI) via tmux"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.scripts]
tcd = "tcd.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcd"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
